objects/Work_Order_Volume__c.object
<CustomObject>
    <fields>
        <fullName>Break_fix_Volume__c</fullName>
        <label>Break-fix Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Commerical_Install_Volume__c</fullName>
        <label>Commerical Install Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Completed__c</fullName>
        <label>Date Completed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Inspection_Volume__c</fullName>
        <label>Inspection Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Maintenance_Volume__c</fullName>
        <label>Maintenance Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Residential_Install_Volume__c</fullName>
        <label>Residential Install Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_Territory__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Territory</label>
        <referenceTo>ServiceTerritory</referenceTo>
        <relationshipLabel>Work Order Volumes</relationshipLabel>
        <relationshipName>Work_Order_Volumes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Total_Work_Order_Volume__c</fullName>
        <formula>Break_fix_Volume__c +  Commerical_Install_Volume__c +  Inspection_Volume__c +  Maintenance_Volume__c +  Residential_Install_Volume__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Work Order Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Work Order Volume</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Total_Work_Order_Volume__c</columns>
        <columns>Service_Territory__c</columns>
        <columns>Date_Completed__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>WOV-{0000}</displayFormat>
        <label>Work Order Volume Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Order Volumes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>